// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches <Labels> default snapshot when VITE_IS_CENTRAL is false 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="map"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 1;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://a.tile.openstreetmap.org/16/10550/25435.png"
              style="width: 256px; height: 256px; left: -105px; top: -16px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      />
      <div
        class="leaflet-pane leaflet-shadow-pane"
      />
      <div
        class="leaflet-pane leaflet-marker-pane"
      >
        <div
          class="leaflet-marker-icon label-map label-mp leaflet-zoom-hide"
          role="button"
          style="margin-left: -55px; margin-top: -7px; width: 12px; height: 12px; left: 59px; top: -233px; z-index: -233;"
          tabindex="0"
        >
          <div
            data-testid="label-mp"
          >
            Memorial Park
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-quinlan leaflet-zoom-hide"
          role="button"
          style="margin-left: -45px; margin-top: -25px; width: 12px; height: 12px; left: 115px; top: -239px; z-index: -239;"
          tabindex="0"
        >
          <div
            data-testid="label-quinlan"
          >
            Quinlan Community Center
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-mp-tennis leaflet-zoom-hide"
          role="button"
          style="margin-left: -40px; margin-top: -10px; width: 12px; height: 12px; left: -1px; top: -268px; z-index: -268;"
          tabindex="0"
        >
          <div
            data-testid="label-mp-tennis"
          >
            Tennis Courts
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-amphitheatre leaflet-zoom-hide"
          role="button"
          style="margin-left: -40px; margin-top: -15px; width: 12px; height: 12px; left: 6px; top: -155px; z-index: -155;"
          tabindex="0"
        >
          <div
            data-testid="label-amphitheatre"
          >
            Amphitheatre
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-veterans leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -20px; width: 12px; height: 12px; left: -25px; top: -147px; z-index: -147;"
          tabindex="0"
        >
          <div
            data-testid="label-veterans"
          >
            Veterans Memorial
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-senior leaflet-zoom-hide"
          role="button"
          style="margin-left: -25px; margin-top: -20px; width: 12px; height: 12px; left: -43px; top: -84px; z-index: -84;"
          tabindex="0"
        >
          <div
            data-testid="label-senior"
          >
            Senior Center
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-da leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -30px; width: 12px; height: 12px; left: 14px; top: 243px; z-index: 243;"
          tabindex="0"
        >
          <div
            data-testid="label-da"
          >
            De Anza College
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-vpac leaflet-zoom-hide"
          role="button"
          style="margin-left: -55px; margin-top: -20px; width: 12px; height: 12px; left: 50px; top: -1px; z-index: -1;"
          tabindex="0"
        >
          <div
            data-testid="label-vpac"
          >
            Visual & Performing Arts Center (VPAC)
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-hinson leaflet-zoom-hide"
          role="button"
          style="margin-left: -25px; margin-top: -30px; width: 12px; height: 12px; left: -29px; top: 62px; z-index: 62;"
          tabindex="0"
        >
          <div
            data-testid="label-hinson"
          >
            Hinson Campus Center
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-dehart leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -30px; width: 12px; height: 12px; left: -83px; top: 88px; z-index: 88;"
          tabindex="0"
        >
          <div
            data-testid="label-dehart"
          >
            A. Robert De Hart Library
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-mlc leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -40px; width: 12px; height: 12px; left: -150px; top: 63px; z-index: 63;"
          tabindex="0"
        >
          <div
            data-testid="label-mlc"
          >
            Media & Learning Center (MLC)
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-fujitsu leaflet-zoom-hide"
          role="button"
          style="margin-left: -35px; margin-top: -20px; width: 12px; height: 12px; left: -55px; top: 171px; z-index: 171;"
          tabindex="0"
        >
          <div
            data-testid="label-fujitsu"
          >
            Fujitsu Planetarium
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-kirsch leaflet-zoom-hide"
          role="button"
          style="margin-left: -65px; margin-top: -20px; width: 12px; height: 12px; left: 61px; top: 333px; z-index: 333;"
          tabindex="0"
        >
          <div
            data-testid="label-kirsch"
          >
            Kirsch Center for Environmental Studies
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      />
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.openstreetmap.org/copyright"
          >
            OpenStreetMap
          </a>
           contributors
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches <Labels> default snapshot when VITE_IS_CENTRAL is true 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="map"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 1;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://a.tile.openstreetmap.org/16/10550/25435.png"
              style="width: 256px; height: 256px; left: -105px; top: -16px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      />
      <div
        class="leaflet-pane leaflet-shadow-pane"
      />
      <div
        class="leaflet-pane leaflet-marker-pane"
      >
        <div
          class="leaflet-marker-icon label-map label-central leaflet-zoom-hide"
          role="button"
          style="margin-left: -50px; margin-top: -7px; width: 12px; height: 12px; left: 3291px; top: -1276px; z-index: -1276;"
          tabindex="0"
        >
          <div
            data-testid="label-central"
          >
            Central Park
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-tennis-center leaflet-zoom-hide"
          role="button"
          style="margin-left: -45px; margin-top: -20px; width: 12px; height: 12px; left: 3315px; top: -1349px; z-index: -1349;"
          tabindex="0"
        >
          <div
            data-testid="label-tennis-center"
          >
            Santa Clara Tennis Center
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-crc leaflet-zoom-hide"
          role="button"
          style="margin-left: -40px; margin-top: -30px; width: 12px; height: 12px; left: 3180px; top: -1232px; z-index: -1232;"
          tabindex="0"
        >
          <div
            data-testid="label-crc"
          >
            Community Recreation Center (CRC)
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-memorial leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -20px; width: 12px; height: 12px; left: 3147px; top: -1199px; z-index: -1199;"
          tabindex="0"
        >
          <div
            data-testid="label-memorial"
          >
            Veterans Memorial
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-pond leaflet-zoom-hide"
          role="button"
          style="margin-left: -20px; margin-top: -15px; width: 12px; height: 12px; left: 3245px; top: -1167px; z-index: -1167;"
          tabindex="0"
        >
          <div
            data-testid="label-pond"
          >
            Pond
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-playground leaflet-zoom-hide"
          role="button"
          style="margin-left: -45px; margin-top: -20px; width: 12px; height: 12px; left: 3179px; top: -1152px; z-index: -1152;"
          tabindex="0"
        >
          <div
            data-testid="label-playground"
          >
            Magical Bridge Playground
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-pavilion leaflet-zoom-hide"
          role="button"
          style="margin-left: -25px; margin-top: -10px; width: 12px; height: 12px; left: 3230px; top: -1120px; z-index: -1120;"
          tabindex="0"
        >
          <div
            data-testid="label-pavilion"
          >
            Pavilion
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-library leaflet-zoom-hide"
          role="button"
          style="margin-left: -40px; margin-top: -20px; width: 12px; height: 12px; left: 3324px; top: -1107px; z-index: -1107;"
          tabindex="0"
        >
          <div
            data-testid="label-library"
          >
            Central Park Library
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-kiely leaflet-zoom-hide"
          role="button"
          style="margin-left: -30px; margin-top: -10px; width: 12px; height: 12px; left: 3090px; top: -1421px; z-index: -1421;"
          tabindex="0"
        >
          <div
            data-testid="label-kiely"
          >
            Kiely Plaza
          </div>
        </div>
        <div
          class="leaflet-marker-icon label-map label-mariposa leaflet-zoom-hide"
          role="button"
          style="margin-left: -40px; margin-top: -20px; width: 12px; height: 12px; left: 3290px; top: -980px; z-index: -980;"
          tabindex="0"
        >
          <div
            data-testid="label-mariposa"
          >
            Mariposa Shopping Center
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      />
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.openstreetmap.org/copyright"
          >
            OpenStreetMap
          </a>
           contributors
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
